--- a/ex010/index.html
+++ b/ex010/index.html
@@ -1,36 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculator</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="calc" class="calc">
-      <div id="div_nome" class="div_nome"><p>Calculator</p></div>
-      <div id="div_display" class="display"><p id="div_display"></p></div>
-      <div id="div_declas" class="div_declas"></div>
-        <button id="t7" class="tecla">7</button>
-        <button id="t8" class="tecla">8</button>
-        <button id="t9" class="tecla">9</button>
-        <button id="t+" class="tecla">+</button>
-        <button id="t4" class="tecla">4</button>
-        <button id="t5" class="tecla">5</button>
-        <button id="t6" class="tecla">6</button>
-        <button id="t-" class="tecla">-</button>
-        <button id="t1" class="tecla">1</button>
-        <button id="t2" class="tecla">2</button>
-        <button id="t3" class="tecla">3</button>
-        <button id="tx" class="tecla">x</button>
-        <button id="t0" class="tecla">0</button>
-        <button id="tseparador" class="tecla">,</button>
-        <button id="tigual" class="tecla">=</button>
-        <button id="td" class="tecla">/</button>
+        <div id="div_nome" class="div_nome">
+            <p>Calculadora</p>
+        </div>
+        <div id="div_display" class="div_display">
+            <p id="display" class="display">0</p>
+        </div>
+        <div id="div_teclas" class="div_teclas">
+            <button id="t7" class="teclas">7</button>
+            <button id="t8" class="teclas">8</button>
+            <button id="t9" class="teclas">9</button>
+            <button id="t+" class="teclas teclasOp">+</button>
+            <button id="t4" class="teclas">4</button>
+            <button id="t5" class="teclas">5</button>
+            <button id="t6" class="teclas">6</button>
+            <button id="t-" class="teclas teclasOp">-</button>
+            <button id="t1" class="teclas">1</button>
+            <button id="t2" class="teclas">2</button>
+            <button id="t3" class="teclas">3</button>
+            <button id="tx" class="teclas teclasOp">x</button>
+            <button id="t0" class="teclas">0</button>
+            <button id="tseparador" class="teclas">,</button>
+            <button id="tigual" class="teclas teclasOp">=</button>
+            <button id="td" class="teclas teclasOp">/</button>
+        </div>
+
 
 
     </div>
-  <script src="script.js"></script>
+
+    <script src="script.js"></script>
 </body>
 </html>
