--- a/ex010/index.html
+++ b/ex010/index.html
@@ -16,22 +16,26 @@
             <p id="display" class="display">0</p>
         </div>
         <div id="div_teclas" class="div_teclas">
-            <button id="t7" class="teclas">7</button>
-            <button id="t8" class="teclas">8</button>
-            <button id="t9" class="teclas">9</button>
-            <button id="t+" class="teclas teclasOp">+</button>
-            <button id="t4" class="teclas">4</button>
-            <button id="t5" class="teclas">5</button>
-            <button id="t6" class="teclas">6</button>
-            <button id="t-" class="teclas teclasOp">-</button>
-            <button id="t1" class="teclas">1</button>
-            <button id="t2" class="teclas">2</button>
-            <button id="t3" class="teclas">3</button>
-            <button id="tx" class="teclas teclasOp">x</button>
-            <button id="t0" class="teclas">0</button>
-            <button id="tseparador" class="teclas">,</button>
-            <button id="tigual" class="teclas teclasOp">=</button>
-            <button id="td" class="teclas teclasOp">/</button>
+            <button id="ton" class="teclas teclasOp">ON</button>
+            <button id="tlimpar" class="teclas">CL</button>
+            <button id="t(" class="teclas num">(</button>
+            <button id="t)" class="teclas num">)</button>
+            <button id="t7" class="teclas num">7</button>
+            <button id="t8" class="teclas num">8</button>
+            <button id="t9" class="teclas num">9</button>
+            <button id="t+" class="teclas teclasOp op">+</button>
+            <button id="t4" class="teclas num">4</button>
+            <button id="t5" class="teclas num">5</button>
+            <button id="t6" class="teclas num">6</button>
+            <button id="t-" class="teclas teclasOp op">-</button>
+            <button id="t1" class="teclas num">1</button>
+            <button id="t2" class="teclas num">2</button>
+            <button id="t3" class="teclas num">3</button>
+            <button id="tx" class="teclas teclasOp op">x</button>
+            <button id="t0" class="teclas num">0</button>
+            <button id="tseparador" class="teclas num">,</button>
+            <button id="tigual" class="teclas teclasOp res">=</button>
+            <button id="td" class="teclas teclasOp op">/</button>
         </div>
 
 
